--- a/gen/_template/main.tmpl
+++ b/gen/_template/main.tmpl
@@ -248,6 +248,31 @@ func Decode{{ $f.Func }} (buf *bin.Buffer) ({{ $f.Name }}, error) {
     }
 }
 
+// {{ $f.Func }} boxes the {{ $f.Name }} providing a helper.
+type {{ $f.Func }}Box struct {
+    {{ $f.Func }} {{ $f.Name }}
+}
+
+// Decode implements bin.Decoder for {{ $f.Func }}Box.
+func (b *{{ $f.Func }}Box) Decode(buf *bin.Buffer) error {
+    if b == nil {
+        return fmt.Errorf("unable to decode {{ $f.Func }}Box to nil")
+    }
+    v, err := Decode{{ $f.Func }}(buf)
+    if err != nil {
+        return fmt.Errorf("unable to decode boxed value: %w", err)
+    }
+    b.{{ $f.Func }} = v
+    return nil
+}
+
+// Encode implements bin.Encode for {{ $f.Func }}Box.
+func (b *{{ $f.Func }}Box) Encode(buf *bin.Buffer) error {
+    if b == nil || b.{{ $f.Func }} == nil {
+        return fmt.Errorf("unable to encode {{ $f.Name }} as nil")
+    }
+    return b.{{ $f.Func }}.Encode(buf)
+}
 {{ end }}
 
 {{ end }}
