--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -6,6 +6,7 @@ package {{ $.Package }}
 import (
 "context"
 "fmt"
+"strings"
 
 "github.com/gotd/td/bin"
 )
@@ -14,5 +15,6 @@ import (
 var _ = bin.Buffer{}
 var _ = context.Background()
 var _ = fmt.Stringer(nil)
+var _ = strings.Builder{}
 
 {{ end }}
