feat(gen): getdocs links support

--- a/internal/gen/_template/utils.tmpl
+++ b/internal/gen/_template/utils.tmpl
@@ -17,3 +17,11 @@
 {{- else if $.Slice }}[]{{ $.Type }}
 {{- else }}{{ $.Type }}
 {{- end }}{{- end }}
+
+{{ define "print_links" }}
+//
+// Links:
+{{- range $i, $link := . }}
+//  {{ add $i 1 }}) {{ $link }}
+{{- end }}
+{{- end }}
