--- a/internal/gen/_template/registry.tmpl
+++ b/internal/gen/_template/registry.tmpl
@@ -2,6 +2,11 @@
 {{ $pkg := $.Package }}
 {{ template "header" $ }}
 
+{{- if $.Layer }}
+// Layer version of schema.
+const Layer = {{ $.Layer }}
+{{- end }}
+
 // Types returns mapping from type ids to TL type names.
 func TypesMap() map[uint32]string {
   return map[uint32]string {
