--- a/internal/gen/_template/registry.tmpl
+++ b/internal/gen/_template/registry.tmpl
@@ -16,4 +16,14 @@ func TypesMap() map[uint32]string {
   }
 }
 
+// TypesConstructorMap maps type ids to constructors.
+func TypesConstructorMap() map[uint32]func() bin.Object {
+return map[uint32]func() bin.Object {
+{{- range $elem := $.Registry }}
+  0x{{ $elem.HexID }}: func() bin.Object { return &{{ $elem.Name }}{} },
+{{- end }}
+  }
+}
+
+
 {{ end }}
