--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -1,3 +1,5 @@
+{{- /*gotype: github.com/gotd/td/internal/gen.config*/ -}}
+
 {{ define "main" }}
 {{ $pkg := $.Package }}
 {{ template "header" $ }}
