--- a/internal/gen/_template/handlers.tmpl
+++ b/internal/gen/_template/handlers.tmpl
@@ -19,6 +19,7 @@ type UpdateContext struct {
 
     Users map[int]*User
     Chats map[int]*Chat
+    Channels map[int]*Channel
     init bool
 }
 
@@ -38,12 +39,14 @@ func (u *UpdateContext) lazyInitFromUpdates(updates *Updates) {
 	}
 
     u.Chats = make(map[int]*Chat, len(updates.Chats))
+    u.Channels = make(map[int]*Channels, len(updates.Chats))
 	for _, class := range updates.Chats {
-		chat, ok := class.(*Chat)
-		if !ok {
-			continue
-		}
-		u.Chats[chat.ID] = chat
+        switch chat := class.(type) {
+        case *Chat:
+            u.Chats[chat.ID] = chat
+        case *Channel:
+            u.Channels[chat.ID] = chat
+        }
 	}
 }
 
