--- a/internal/gen/_template/main.tmpl
+++ b/internal/gen/_template/main.tmpl
@@ -37,6 +37,7 @@ type {{ $s.Name }} struct {
 const {{ $s.Name }}TypeID = 0x{{ $s.HexID }};
 {{- end }}
 
+{{template "zero_derive" $s }}
 {{template "string_derive" $s }}
 
 // Encode implements bin.Encoder.
@@ -45,7 +46,14 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) Encode({{ $s.BufArg }} *bin.Buffer) erro
         return fmt.Errorf("can't encode {{ $s.RawType }} as nil")
     }
 {{- if not $s.Vector }}
-{{ $s.BufArg }}.PutID({{ $s.Name }}TypeID)
+    {{ $s.BufArg }}.PutID({{ $s.Name }}TypeID)
+{{- end }}
+{{- range $f := $s.Fields }}
+    {{- if $f.Conditional }}
+    if !({{ $s.Receiver }}.{{template "compare_zero" $f}}) {
+        {{ $s.Receiver }}.{{ $f.ConditionalField }}.Set({{ $f.ConditionalIndex }})
+    }
+    {{- end }}
 {{- end }}
 {{- range $f := $s.Fields }}
     {{- if not $f.ConditionalBool }}
@@ -100,7 +108,7 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) Encode({{ $s.BufArg }} *bin.Buffer) erro
 {{- range $f := $s.Fields }}
 {{ if $f.Conditional }}
 // Set{{ $f.Name }} sets value of {{ $f.Name }} conditional field.
-func ({{ $s.Receiver }} *{{ $s.Name }}) Set{{ $f.Name }}(value {{ if $f.DoubleSlice }}[][]{{ else if $f.Slice }}[]{{ end }} {{ $f.Type }}) {
+func ({{ $s.Receiver }} *{{ $s.Name }}) Set{{ $f.Name }}(value {{ template "print_type" $f }}) {
 {{- if $f.ConditionalBool }}
     if value {
         {{ $s.Receiver }}.{{ $f.ConditionalField }}.Set({{ $f.ConditionalIndex }})
@@ -311,7 +319,9 @@ type {{ $f.Name }} interface {
     bin.Encoder
     bin.Decoder
     construct() {{ $f.Name }}
+
     fmt.Stringer
+    Zero() bool
 }
 
 // Decode{{ $f.Func }} implements binary de-serialization for {{ $f.Name }}.
