feat(gen): generate basic error helpers
Fix #134

--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -5,6 +5,7 @@ package {{ $.Package }}
 
 import (
 "context"
+"errors"
 "fmt"
 "strings"
 
@@ -16,5 +17,6 @@ var _ = bin.Buffer{}
 var _ = context.Background()
 var _ = fmt.Stringer(nil)
 var _ = strings.Builder{}
+var _ = errors.Is
 
 {{ end }}
